# -iot-security-platform-python

./: .env.example  .gitignore  ALTERNATIVE_NOTIFICATION_SERVICES.md  API_DOCS_VISIBILITY.md  COMPLETE_PLATFORM_SUMMARY.md  CURRENT_PROGRESS.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_START.md  DEPLOY_NOW.md  DEPLOY_NOW_STEPS.md  DEVELOPMENT_ROADMAP.md  DEVICE_DISCOVERY_IMPROVEMENTS.md  Dockerfile  FEATURES_ADDED_TODAY.md  FEATURES_COMPLETE.md  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_SUMMARY.md  GET_STARTED_DEPLOY.md  HTTPS_QUICK_START.md  IMPROVEMENTS_PLAN.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_NEW_FEATURES.md  LAUNCH_CHECKLIST.md  LAUNCH_READY.md  MOBILE_APP_READY.md  MOBILE_APP_SUMMARY.md  NEXT_STEPS.md  NEXT_STEPS_SUMMARY.md  NEXT_TESTING_STEPS.md  PAYMENT_INTEGRATION_COMPLETE.md  PRODUCTION_READY.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  QUICK_START_GUIDE.md  QUICK_TEST_GUIDE.md  QUICK_TEST_SCRIPT.py  RAILWAY_502_FIX.md  README.md  README_DEPLOYMENT.md  (+39 more)
.cursor/: worktree-setup.json
agent/: .env.example  README.md  device_agent.py  devices.example.json  devices.json  discover.py  network_watchdog.py
api/: __init__.py  router.py
core/: __init__.py  config.py  middleware.py  startup.py
docs/: ADMIN_AND_BETA_USERS.md  ALERT_SEVERITY_GUIDE.md  ANDROID_EMULATOR_SETUP.md  API_CONVENTIONS.md  API_KEYS_SETUP.md  ARTEFACT_SCRIPT.md  CONNECTION_STRING_EXAMPLE.md  CUSTOM_DOMAIN_RAILWAY.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  GO_LIVE_AND_SCALE_PLAYBOOK.md  GO_LIVE_STEPS.md  HOW_DEVICES_CONNECT.md  ICA.docx  IOS_BUILD_AND_INSTALL.md  NAMING.md  (+32 more)
(+292 files in other folders)
